# operating-system

./: .gitignore  .gitmodules  README.md
docs/: ARCHITECTURE.md  FILESYSTEM.md  NAMING.md  PERMISSIONS.md  RESERVED_VALUES.md
pith/: Cargo.toml
pith/benches/: core_bench.rs
pith/src/: alphabet.rs  auth.rs  boot.rs  config.rs  dispatcher.rs  effector.rs  error.rs  identity.rs  lib.rs  main.rs  parser.rs  permissions.rs  session.rs  trie.rs  watcher.rs
pith/src/api/: handlers.rs  mod.rs  protocol.rs
pith/src/subsystems/: channels.rs  databases.rs  events.rs  jobs.rs  logs.rs  mod.rs  programs.rs  scheduler.rs  states.rs  subscriptions.rs  workers.rs
src/hard/identities/: make.sh
