[package]
name = "pith"
version = "0.1.0"
edition = "2021"
description = "The Rust engine for 0-Bytes OS — observes the filesystem, interprets it as a living system"

[dependencies]
tokio = { version = "1", features = ["full"] }
notify = "7"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = "0.4"
unicode-normalization = "0.1"
thiserror = "2"
dashmap = "6"
walkdir = "2"
filetime = "0.2"
tempfile = "3"

[dev-dependencies]
tempfile = "3"
tokio-test = "0.4"
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }

[[bench]]
name = "core_bench"
harness = false

[[bin]]
name = "stress"
path = "src/bin/stress.rs"
